fixed error where colors were not showing up right when the rows and cols were odd numbers

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,10 +27,3 @@ h1{
 
 }
 
-.bg-warning{
-  background-color: #FF0000;
-}
-
-.bg-dark{
-  background-color: #343A40;
-}
